# parlok

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json
.github/workflows/: publish.yml
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: README.md  demo.py  parlok.yaml
sdk/python/src/parlok/: __init__.py  _proxy.py  adapter.py  audit.py  cli.py  decision.py  errors.py  firewall.py  state.py  toolcall.py
sdk/python/src/parlok/_templates/: parlok.starter.yaml
sdk/python/src/parlok/adapters/: slack.py
sdk/python/src/parlok/hitl/: app.py  base.py  slack_card.py  webhook.py
sdk/python/src/parlok/policy/: engine.py  expr.py  loader.py  resolvers.py  transforms.py  triggers.py
sdk/python/tests/: test_adapter.py  test_audit.py  test_cli.py  test_decision.py  test_decision_rewrite.py  test_errors.py  test_firewall.py  test_firewall_approve.py  test_firewall_wrap.py  test_proxy.py  test_smoke.py  test_state.py  test_toolcall.py
sdk/python/tests/adapters/: test_slack.py
sdk/python/tests/hitl/: test_approvers.py
sdk/python/tests/policy/: test_engine.py  test_expr.py  test_loader.py  test_transforms.py  test_triggers.py
web/: .env.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sitemap.ts  twitter-image.tsx
web/app/api/waitlist/: route.ts
web/app/docs/: layout.tsx  page.tsx
web/app/docs/[...slug]/: page.tsx
web/components/: CodeSnippet.tsx  CodeSnippetView.tsx  DocsContent.tsx  DocsSidebar.tsx  Footer.tsx  Hero.tsx  HeroDemo.tsx  HeroLanguageBadge.tsx  HowItWorksSteps.tsx  InlineLanguageToggle.tsx  InstallSection.tsx  InstallSectionView.tsx  LanguageProvider.tsx  LogoMark.tsx  NavBar.tsx  ScenariosTicker.tsx  StatsStrip.tsx  TypingCycle.tsx  UseCases.tsx  WaitlistForm.tsx
web/content/docs/: 00-introduction.md  01-getting-started.md  02-rules.md  03-adapters.md
web/content/docs/02-reference/: 01-rules.md  02-adapters.md  03-decisions.md
web/lib/: docs.ts  scenarios.ts  site.ts
