[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parlok"
version = "0.0.1"
description = "Guardrails for agents. A firewall for agent tool calls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brandon Hale" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/parlok"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
