[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "parlok"
dynamic = ["version"]
description = "Guardrails for agents. A firewall for agent tool calls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brandon Hale" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev   = ["pytest>=7", "pytest-asyncio>=0.23"]
slack = ["slack-sdk>=3"]
hitl  = ["starlette>=0.30"]

[project.scripts]
parlok = "parlok.cli:main"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+.*)$", fallback_version = "0.1.0" }

[tool.hatch.build.hooks.vcs]
version-file = "src/parlok/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/parlok"]

[tool.hatch.build.targets.wheel.force-include]
"src/parlok/_templates/parlok.starter.yaml" = "parlok/_templates/parlok.starter.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
